PCS BAckup 26Dec2023/Backup-Source/objects/GCP_Product_Commercials__c.object
<CustomObject>
    <fields>
        <fullName>AWP_Current_Effective_Date__c</fullName>
        <label>AWP Current Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AWP_Current_Package_Price__c</fullName>
        <label>AWP Current Package Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Unit__c</fullName>
        <label>Billing Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dosage_Form__c</fullName>
        <label>Dosage Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCN__c</fullName>
        <label>GCN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPI_Generic_Product_Identifier__c</fullName>
        <label>GPI Generic Product Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSN__c</fullName>
        <label>GSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Name__c</fullName>
        <label>Generic Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDC_Code__c</fullName>
        <label>NDC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orange_Book_Code__c</fullName>
        <label>Orange Book Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Description__c</fullName>
        <label>Package Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Size__c</fullName>
        <label>Package Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <label>Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>GCP Product Commercials</relationshipLabel>
        <relationshipName>GCP_Product_Commercials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WAC_Current_Effective_Date__c</fullName>
        <label>WAC Current Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WAC_Current_Package_Price__c</fullName>
        <label>WAC Current Package Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>GCP Product Commercials</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GCPProdDtls-{0000000}</displayFormat>
        <label>GCP Product Commercials Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP Product Commercials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>